--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -76,6 +76,13 @@ jobs:
             }}
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        run: poetry install --no-interaction --no-root --with dev
+        run: poetry install --no-interaction --no-root --with dev 
+      - name: Install library
+        run: poetry install --no-interaction --with dev
       - name: Perform unit testing
-        run: poetry run poe test
+        run: poetry run poe test_cov
+      - name: Upload coverage
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}        
+          files: ../cov.xml
