--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ poethepoet = "^0.20.0"
 yamlfix = "^1.10.0"
 pytest = "^7.3.1"
 hypothesis = "^6.76.0"
+pytest-cov = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -38,7 +39,14 @@ ruff = "ruff --fix afids_utils"
 ruff-check = "ruff afids_utils"
 quality = ["yamlfix", "isort", "black", "ruff"]
 quality-check = ["yamlfix-check", "isort-check", "black-check", "ruff-check"]
-test = "pytest --doctest-modules"
+test = "pytest --doctest-modules afids_utils/tests"
+test_cov = "pytest --doctest-modules --cov=afids_utils afids_utils/tests/ --cov-report xml:../cov.xml"
+
+[tool.coverage]
+omit = "afids_utils/tests/*"
+fail_under = 90
+precision = 2
+show_missing = true
 
 [tool.isort]
 profile = "black"
