--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ isort = "^5.12.0"
 poethepoet = "^0.20.0"
 yamlfix = "^1.10.0"
 pytest = "^7.3.1"
-hypothesis = "^6.76.0"
+hypothesis = {extras = ["numpy"], version = "^6.77.0"}
 pytest-cov = "^4.1.0"
 
 [build-system]
