--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,11 +5,13 @@ description = "Utility functions for working with AFIDs data / workflows"
 authors = ["Jason Kai <tkai@uwo.ca>"]
 license = "MIT"
 readme = "README.md"
-packages = [{include = "afids_utils"}]
+packages = [
+    {include = "afids_utils"}
+]
+exclude = ["afids_utils/tests"]
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.11"
-nibabel = "^5.1.0"
 numpy = "^1.24.3"
 pandas = "^2.0.2"
 
