switch from pandas to polars
- Switches dataframe library from pandas 2.0.2 to polars 0.18.3 with
numpy plugin for performance related reasons
- Update use of FCSV_FIELDNAMES to a dict to be able to easily update
pl.Dataframe dtypes
- Directly use fid_num and label to grab desired fiducial
- Use of scan_csv instead of read_csv for performance since the fcsv file would need to
be read each time a specific fiducial is to be extracted

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,16 +1,14 @@
+---
 comment:
-  layout: "header, diff, flags, components"
-  
+  layout: header, diff, flags, components
 coverage:
   status:
     project:
       default:
         target: 100%
         threshold: 5%
-
 component_management:
   individual_components:
     - component_id: afids-utils_io
       name: afids-utils_io
-      paths:
-        - afids_utils/io/
+      paths: [afids_utils/io/]
