--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ exclude = ["afids_utils/tests"]
 [tool.poetry.dependencies]
 python = ">=3.8, <3.11"
 numpy = "^1.24.3"
-pandas = "^2.0.2"
+polars = {extras = ["numpy"], version = "^0.18.3"}
 
 [tool.poetry.group.dev]
 optional = true
