--- a/codecov.yml
+++ b/codecov.yml
@@ -10,5 +10,8 @@ coverage:
 component_management:
   individual_components:
     - component_id: afids-utils_io
-      name: afids-utils_io
-      paths: [afids_utils/io/]
+      name: afids_utils/io.py
+      paths: [afids_utils/io.py]
+    - component_id: afids-utils_transforms
+      name: afids_utils/transforms.py
+      paths: [afids_utils/transforms.py]
