split int_vol dtype tests, update codecov
- split the testing for integral volume for int and floats respectively
- add coverage for "features"
- add "..." to ignore (whic should resolve the missing coverage for
overload methods

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ omit = "afids_utils/tests/*"
 fail_under = 90
 precision = 2
 show_missing = true
+exclude_lines = ["pragma: no cover"]
 
 [tool.isort]
 profile = "black"
