--- a/codecov.yml
+++ b/codecov.yml
@@ -15,3 +15,6 @@ component_management:
     - component_id: afids-utils_transforms
       name: afids_utils/transforms.py
       paths: [afids_utils/transforms.py]
+    - component_id: afids-utils_features
+      name: afids_utils/features
+      paths: [afids_utils/features/]
