--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 sphinx-argparse>=0.4.0,<0.5
-sphinxcontrib-asciinema>=0.3.7,<0.4
-myst-parser>=1.0.0,<2.0
-furo>=2023.3.23,<2024
-sphinx_copybutton>=0.5.1,<0.6
+sphinx-copybutton>=0.5.1,<0.6
+sphinx-design>=0.4.1,<0.5.0
 sphinx-reredirects>=0.1,<0.2
-sphinx_design>=0.4.1,<0.5.0
+furo>=2023.3.23,<2024
+myst-parser>=1.0.0,<2.0
+numpydoc>=1.5.0,<1.6
