update AfidSet strategies and defaults
- Removes the default value for set for `desc` for AfidPosition. In
  tests relying on this, the actual value is read in if the Afid is
valid, otherwise set to "Unknown"
- Also renames the SearchStrategy from `afid_set` to `afid_sets`
- Renames the variable `afids_set` to `afid_set` to be correspond to
  class in tests
- Renamed `randomize_coord` to `randomize_header` accordingly, to
  dynamically generate the header information or to use a static
version and coordinate system
- Removed unnecessary imports from test_ext.py, and simplified
  test_save_fcsv_valid_template to directly assert loaded content with
generated afid_set

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,8 +39,8 @@ black = "black afids_utils"
 black-check = "black --check afids_utils"
 ruff = "ruff --fix afids_utils"
 ruff-check = "ruff afids_utils"
-quality = ["yamlfix", "isort", "black", "ruff"]
-quality-check = ["yamlfix-check", "isort-check", "black-check", "ruff-check"]
+quality = ["yamlfix", "ruff", "isort", "black"]
+quality-check = ["yamlfix-check", "ruff-check", "isort-check", "black-check"]
 test = "pytest --doctest-modules afids_utils/tests"
 
 [tool.coverage]
