--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ exclude = ["afids_utils/tests"]
 python = ">=3.8, <3.12"
 attrs = "^23.1.0"
 numpy = "^1.24.3"
+more-itertools = "^10.1.0"
 
 [tool.poetry.group.dev]
 optional = true
