--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,23 +12,25 @@ exclude = ["afids_utils/tests"]
 
 [tool.poetry.dependencies]
 python = ">=3.8, <3.12"
-attrs = "^23.1.0"
-numpy = "^1.24.3"
+attrs = ">=23.1.0"
+numpy = ">=1.24.3"
 
 [tool.poetry.group.dev]
 optional = true
 
 [tool.poetry.group.dev.dependencies]
-black = "^23.3.0"
-ruff = "^0.0.270"
-isort = "^5.12.0"
-poethepoet = "^0.20.0"
-yamlfix = "^1.10.0"
-pytest = "^7.3.1"
-hypothesis = {extras = ["numpy"], version = "^6.77.0"}
-pytest-cov = "^4.1.0"
-more-itertools = "^10.1.0"
-pyright = "^1.1.327"
+black = ">=23.3.0"
+ruff = ">=0.0.270"
+isort = ">=5.12.0"
+poethepoet = ">=0.20.0"
+yamlfix = ">=1.10.0"
+pytest = ">=7.3.1"
+hypothesis = {extras = ["numpy"], version = ">=6.77.0"}
+pytest-cov = ">=4.1.0"
+more-itertools = ">=10.1.0"
+pyright = ">=1.1.327"
+pytest-xdist = ">=3.3.1"
+pytest-split = ">=0.8.1"
 
 [build-system]
 requires = ["poetry-core"]
