--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@
 name: Lint and test workflow
 on:
   push:
-    branches: ['*', '!push-action/*']
+    branches: ["*", "!push-action/*"]
   pull_request:
-    branches: ['*', '!push-action/*']
+    branches: ["*", "!push-action/*"]
 jobs:
   quality:
     name: Lint code
@@ -12,9 +12,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup Python environment
-        uses: khanlab/actions/.github/actions/action-setup_task-installPyProject@v0.2.0
+        uses: khanlab/actions/.github/actions/action-setup_task-installPyProject@v0.2.1
         with:
-          python-version: '3.10'
+          python-version: "3.10"
       - name: yamlfix
         run: poetry run poe yamlfix-check
       - name: isort
@@ -30,11 +30,11 @@ jobs:
     needs: [quality]
     strategy:
       matrix:
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-        test-split: ['1', '2', '3', '4', '5']
+        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        test-split: ["1", "2", "3", "4", "5"]
     steps:
       - name: Setup Python environment
-        uses: khanlab/actions/.github/actions/action-setup_task-installPyProject@v0.2.0
+        uses: khanlab/actions/.github/actions/action-setup_task-installPyProject@v0.2.1
         with:
           python-version: ${{ matrix.python-version }}
           install-library: true
