--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ exclude = ["afids_utils/tests"]
 python = ">=3.8, <3.12"
 attrs = ">=23.1.0"
 numpy = ">=1.24.3"
-nilearn = { version = ">=0.10.1", optional = true }
+nilearn = { version = ">=0.10.1", extras = ["plotting"], optional = true }
 plotly = { version = ">=5.16.1", optional = true }
 
 [tool.poetry.extras]
