Add plotting to codecov
Also fix type to afids_utils/afids.py

--- a/codecov.yml
+++ b/codecov.yml
@@ -11,13 +11,16 @@ component_management:
   individual_components:
     - component_id: afids-utils_afids
       name: afids_utils/afids.py
-      paths: [afidS_utils/afids.py]
+      paths: [afids_utils/afids.py]
     - component_id: afids-utils_ext
       name: afids_utils/ext
       paths: [afids_utils/ext/*.py]
     - component_id: afids-utils_metrics
       name: afids_utils/metrics.py
       paths: [afids_utils/metrics.py]
+    - component_id: afids-utils_plotting
+      name: afids_utils/plotting.py
+      paths: [afids_utils/plotting.py]
     - component_id: afids-utils_transforms
       name: afids_utils/transforms.py
       paths: [afids_utils/transforms.py]
