--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,9 +17,11 @@ formats: [pdf]
 build:
   os: ubuntu-20.04
   tools:
-    python: '3.10'
+    python: "3.10"
 python:
   install:
     - requirements: docs/requirements.txt
     - method: pip
       path: .
+      extra_requirements:
+        - plotting
