--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
     secrets:
       BP_PAT: ${{ secrets.BP_PAT_TOKEN }}
   deploy-pypi:
+    needs: [release-package]
     uses: khanlab/actions/.github/workflows/workflow-release_task-deployPypi.yml@v0.3.2
     secrets:
       PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
